--- a/index.html
+++ b/index.html
@@ -1,15 +1,73 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-	<meta charset="UTF-8">	
-	<meta name="SiteName" content="BestThink">
-	<meta name="SiteDomain" content="www.bestthink.top">
-	<meta name="Keywords" content="BestThink">
-	<meta name="Description" content="BestThink">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title>BestThink</title>
-</head>
-<body>
-	<h1>努力开发中！</h1>
-</body>
+<html lang="en">
+    <head>
+        <!--====== Required meta tags ======-->
+        <meta charset="utf-8"/>
+        <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+        <meta name="description" content=""/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <!--====== Title ======-->
+        <title>BestThink</title>
+        <!--====== Favicon Icon ======-->
+        <link rel="shortcut icon" href="/favicon.ico" type="image/png"/>
+        <!--====== Bootstrap css ======-->
+        <link rel="stylesheet" href="/assets/libs/bootstrap/css/bootstrap.min.css"/>
+        <!--====== Style css ======-->
+        <link rel="stylesheet" href="/assets/css/style.css"/>
+    </head>
+    <body>
+        <!--====== Preloader ======-->
+        <div class="preloader d-flex align-items-center justify-content-center">
+            <div class="cssload-container">
+                <div class="cssload-loading">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </div>
+            </div>
+        </div>
+        <div class="page-wrapper project-two image-version">
+            <div class="container-fluid">
+                <div class="row ">
+                    <div class="col-lg-6">
+                        <div class="page-img" style="background-image: url(/assets/images/image-version.jpg);"></div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-lg-8 offset-lg-2 custom">
+                                <div class="page-content text-center">
+                                    <div class="logo">
+                                        <a href="#">
+                                            <img src="/assets/images/logo.png" alt="Anony">
+                                        </a>
+                                    </div>
+                                    <div class="coming-soon-title">
+                                        <h3>Coming Soon</h3>
+                                    </div>
+                                    <div class="title">
+                                        <h1>
+                                            Nice to <br>Meet you
+                                        </h1>
+                                        <p>
+                                            Our New Website Is On Its Way.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="days-count">
+                <div class="count-content" id="dayscountdown" data-countdown="2021/9/1"></div>
+            </div> -->
+        </div>
+        <!--====== jquery js ======-->
+        <script src="/assets/js/jquery-1.12.4.min.js"></script>
+        <!--====== Bootstrap js ======-->
+        <script src="/assets/libs/bootstrap/js/bootstrap.min.js"></script>
+        <!--====== Main js ======-->
+        <script src="/assets/js/main.js"></script>
+    </body>
 </html>
