--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
                             <div class="col-lg-8 offset-lg-2 custom">
                                 <div class="page-content text-center">
                                     <div class="logo">
-                                        <a href="#">
-                                            <img src="/assets/images/logo.png" alt="Anony">
-                                        </a>
+										<img src="/assets/images/logo.png" alt="BestThink">
                                     </div>
                                     <div class="coming-soon-title">
                                         <h3>Coming Soon</h3>
