--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <!--====== Required meta tags ======-->
         <meta charset="utf-8"/>
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-        <meta name="description" content="BestThink"/>
+        <meta name="description" content="Vipz Studio"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <!--====== Title ======-->
-        <title>BestThink</title>
+        <title>Vipz Studio</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="/favicon.ico" type="image/png"/>
         <!--====== Bootstrap css ======-->
@@ -57,9 +57,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="days-count">
-                <div class="count-content" id="dayscountdown" data-countdown="2021/9/1"></div>
-            </div> -->
         </div>
         <!--====== jquery js ======-->
         <script src="/assets/js/jquery-1.12.4.min.js"></script>
