--- a/index.html
+++ b/index.html
@@ -64,5 +64,15 @@
         <script src="/assets/libs/bootstrap/js/bootstrap.min.js"></script>
         <!--====== Main js ======-->
         <script src="/assets/js/main.js"></script>
+	<script src="https://zz.bdstatic.com/linksubmit/push.js"></script>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?69ef6cf7946d07ee7af276bcaf73ed0a";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
     </body>
 </html>
