--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
         <meta name="description" content="Vipz Studio"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+	    <meta name="baidu-site-verification" content="code-PXnf4D02q7" />
         <!--====== Title ======-->
         <title>Vipz Studio</title>
         <!--====== Favicon Icon ======-->
